@@ -24,8 +24,9 @@ Bug fixes:
 ~~~~~~~~~~
 - Added in cpsinstall a migration routine for badly stored portal properties
   such as "enable_portal_joining".
-- Moved some pictures which were in the "cps_default" skin into the "cps_images"
-  skin where they should be.
+- Moved some pictures which were in the "cps_default" skin into the
+  "cps_images" skin where they should be.
+- Fixed object id change in folder, some skins were missing with CMF 1.5.0.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - cpsinstaller better check of elementtree optional import
